--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,14 +1,13 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
 ---
 
-<Layout title="欢迎来到blog-关于此站">
+<Layout title="欢迎来到blog-博客1">
   <a href="/">回到首页</a>
   <h1>第一篇博客</h1>
-  <h2>作者：ave大白</h2>
+  <h2>作者：mosquito</h2>
 
-  <p>先不想搞样式布局啥的、对，我就是懒🤣</p>
+  <p>🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣咪根</p>
   <p>
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolorem
     aut ratione consequatur adipisci tempore excepturi blanditiis consequuntur
