--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import TestComponent from "../components/TestComponent.vue";
 ---
 
 <Layout title="欢迎来到blog">
   <h1>这是一个博客网站</h1>
   <a href="/about">关于此站</a>
   <a href="/blog">博客1</a>
+  <TestComponent />
 </Layout>
