feat: 介绍页修改文案

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,9 +9,5 @@ import Layout from "../layouts/Layout.astro";
   <h1>关于此站</h1>
   <h2>吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦...</h2>
 
-  <p>
-    我正在尝试使用astro框架搭建一个博客，这是博客第二个界面关于界面，这个界面会写一些介绍之类的东东。。。
-  </p>
-
-  <p>网站会随着我的代码提交而自动打包更新，灰常地智能👍</p>
+  <p>时代少年团，我们喜欢你。</p>
 </Layout>
