feat: 添加看板娘

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import TestComponent from "../components/TestComponent.vue";
+import LiveComponent from "../components/LiveComponent.vue";
 ---
 
 <Layout title="欢迎来到blog">
@@ -8,4 +9,5 @@ import TestComponent from "../components/TestComponent.vue";
   <a href="/about">关于此站</a>
   <a href="/blog">博客1</a>
   <TestComponent client:load />
+  <LiveComponent client:load />
 </Layout>
