--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import LiveComponent from "../components/LiveComponent.vue";
 interface Props {
   title: string;
 }
@@ -17,6 +18,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <LiveComponent client:load />
     <slot />
   </body>
 </html>
