--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,6 @@ const { title } = Astro.props;
   </head>
   <body>
     <slot />
-    <LiveComponent client:load />
+    <!-- <LiveComponent client:load /> -->
   </body>
 </html>
