feat: 基本布局优化

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import LiveComponent from "../components/LiveComponent.vue";
+import "tailwindcss/tailwind.css"
 interface Props {
   title: string;
 }
