--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import TestComponent from "../components/TestComponent.vue";
-
+import SiteHeader from "../components/SiteHeader.vue";
 ---
 
 <Layout title="欢迎来到blog">
-  <h1>不知道什么名字的网站网站</h1>
-  <a href="/about">关于此站</a>
-  <a href="/blog">博客1</a>
-  <TestComponent client:load />
+  <SiteHeader path="/" />
 </Layout>
