--- a/src/pages/archives.astro
+++ b/src/pages/archives.astro
@@ -1,12 +1,10 @@
 ---
+import SiteHeader from "../components/SiteHeader.vue";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="欢迎来到blog-博客1">
-  <a href="/">回到首页</a>
-  <h1>第一篇博客</h1>
-  <h2>作者：mosquito</h2>
-
+<Layout title="欢迎来到咸琅的博客">
+  <SiteHeader path="/archives" />
   <p>🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣🤣咪根</p>
   <p>
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolorem
