--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,8 +3,7 @@ import SiteHeader from "../components/SiteHeader.vue";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="欢迎来到blog-关于此站">
-  <SiteHeader path="/about" />
+<Layout title="欢迎来到blog-关于此站" path="/about">
   <a href="/">回到首页</a>
   <a href="/blog">博客1</a>
   <h1>介绍</h1>
