--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,5 @@ import Layout from "../layouts/Layout.astro";
 import SiteHeader from "../components/SiteHeader.vue";
 ---
 
-<Layout title="欢迎来到blog">
-  <SiteHeader path="/" />
+<Layout title="欢迎来到blog" path="/">
 </Layout>
