--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@
 import SiteHeader from "../components/SiteHeader.vue";
 import "element-plus/dist/index.css";
 import "tailwindcss/tailwind.css";
+import "../assets/style/public.css";
 interface Props {
   title: string;
   path: string;
