feat: 添加小内容 优化样式

--- a/src/layouts/ArticalLayout.astro
+++ b/src/layouts/ArticalLayout.astro
@@ -15,7 +15,11 @@ type Props = MarkdownLayoutProps<{
 const { frontmatter, url } = Astro.props
 ---
 
-<!doctype html>
+<script>
+  import { documentVisibleChange } from '../utils/tools'
+  documentVisibleChange()
+</script>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
