--- a/src/layouts/ArticalLayout.astro
+++ b/src/layouts/ArticalLayout.astro
@@ -34,7 +34,7 @@ const { frontmatter, url } = Astro.props
     <meta charset="UTF-8" />
     <meta name="description" content="博客文章" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <title>{frontmatter.title}</title>
     <style is:global lang="scss">
