feat: 介绍页面增加图片

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout title="欢迎来到blog-关于此站" path="/about">
@@ -8,4 +8,9 @@ import Layout from "../layouts/Layout.astro";
   <h2>吧啦吧啦吧啦吧啦吧啦吧啦吧啦吧啦...</h2>
 
   <p>时代少年团，我们喜欢你。</p>
+  <img
+    src="https://cdnjson.com/images/2024/07/19/99d113ffdbf14735adf77e7bd8e9b059.png"
+    alt="时代少年团，我们喜欢你。"
+    class="w-[532px] h-[314px]"
+  />
 </Layout>
